Finalized layout, partial content added

--- a/horde.html
+++ b/horde.html
@@ -27,217 +27,212 @@
 
 
     <!-- BODY Content -->
-
-    <div class="container-fluid horde-table mt-3">
-        <div class="row justify-content-evenly">
-
-            <div class="col-xl-4 col-lg-6 col-10 my-4">
-                <table class="table table-striped table-borderless table-dark rounded-5">
-                    <thead>
-                        <tr>
-                            <th colspan="4" class="text-center h2">XL Tokyo (H)</th>
-                        </tr>
-                        <tr>
-                            <td colspan=4 class="table-img align-middle">
-                                <div class="img-fluid"><img class="table-img-target" src="images/hordeXLJapan.png"></div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Wave #</th>
-                            <th scope="col">Source</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <div class="col-xl-4 col-lg-6 col-10 my-4">
-                <table class="table table-striped table-borderless rounded-5 table-dark">
-                    <thead>
-                        <tr>
-                            <th colspan="4" class="text-center h2">XL Rome (H)</th>
-                        </tr>
-                        <tr>
-                            <td colspan=4 class="table-img align-middle">
-                                <div class="img-fluid"><img class="table-img-target" src="images/hordeXLRome.png"></div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Wave #</th>
-                            <th scope="col">Source</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>貓白</td>
-                            <td>82</td>
-                            <td><a href="https://www.youtube.com/watch?v=LABCyfjCNH0&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=1&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 1</a> <a href="https://www.youtube.com/watch?v=6Mu7rN6Kka8&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=2&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 2</a></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <div class="col-xl-4 col-lg-6 col-10 my-4">
-                <table class="table table-striped table-borderless rounded-5 table-dark">
-                    <thead>
-                        <tr>
-                            <th colspan="4" class="text-center h2">South Korea (H)</th>
-                        </tr>
-                        <tr>
-                            <td colspan=4 class="table-img align-middle">
-                                <div class="img-fluid"><img class="table-img-target" src="images/hordeSK.png"></div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Wave #</th>
-                            <th scope="col">Source</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <div class="col-xl-4 col-lg-6 col-10 my-4">
-                <table class="table table-striped table-borderless rounded-5 table-dark">
-                    <thead>
-                        <tr>
-                            <th colspan="4" class="text-center h2">New York (H)</th>
-                        </tr>
-                        <tr>
-                            <td colspan=4 class="table-img align-middle">
-                                <div class="img-fluid"><img class="table-img-target" src="images/hordeNY.png"></div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Wave #</th>
-                            <th scope="col">Source</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <div class="col-xl-4 col-lg-6 col-10 my-4">
-                <table class="table table-striped table-borderless rounded-5 table-dark">
-                    <thead>
-                        <tr>
-                            <th colspan="4" class="text-center h2">Jerusalem (H)</th>
-                        </tr>
-                        <tr>
-                            <td colspan=4 class="table-img align-middle">
-                                <div class="img-fluid"><img class="table-img-target" src="images/hordeJ.png"></div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Wave #</th>
-                            <th scope="col">Source</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
+    <div class="col-8 my-4 mx-auto">
+        <div>
+            <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeJapanicon.png" class="me-2">XL Tokyo (H)</div>
         </div>
+        <table class="table table-striped table-borderless table-dark rounded-5">
+            <thead>
+                <tr>
+                    <td colspan=4 class="table-img align-middle">
+                        <div class="img-fluid"><img class="table-img-target img-fluid" src="images/hordeXLJapan.png"></div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Wave #</th>
+                    <th scope="col">Source</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row"><img src="images/firstPlace.png"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th scope="row"><img src="images/secondPlace.png"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th scope="row"><img src="images/thirdPlace.png"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
+
+    <div class="col-8 my-4 mx-auto">
+        <div>
+            <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeRicon.png" class="me-2">XL Rome (H)</div>
+        </div>
+        <table class="table table-striped table-borderless rounded-5 table-dark">
+            <thead>
+                <tr>
+                    <td colspan=4 class="table-img align-middle">
+                        <div class="img-fluid"><img class="table-img-target img-fluid" src="images/hordeXLRome.png"></div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Wave #</th>
+                    <th scope="col">Source</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row"><img src="images/firstPlace.png"></th>
+                    <td>貓白</td>
+                    <td>82</td>
+                    <td><a href="https://www.youtube.com/watch?v=LABCyfjCNH0&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=1&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 1</a> <a href="https://www.youtube.com/watch?v=6Mu7rN6Kka8&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=2&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 2</a></td>
+                </tr>
+                <tr>
+                    <th scope="row"><img src="images/secondPlace.png"></th>
+                    <td>Villainize</td>
+                    <td>39</td>
+                    <td><a href="https://www.youtube.com/watch?v=_FMtQh0cYBQ&ab_channel=Villainize" target="_blank">Full</a></td>
+                </tr>
+                <tr>
+                    <th scope="row"><img src="images/thirdPlace.png"></th>
+                    <td>Rabi William</td>
+                    <td>36</td>
+                    <td><a href="https://www.youtube.com/watch?v=sGksBUE_05U&ab_channel=%E3%83%A9%E3%83%93%E3%82%A6%E3%82%A3%E3%83%AA%E3%82%A2%E3%83%A0-RabiWilliam-" target="_blank">Full</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="col-8 my-4 mx-auto">
+        <div>
+            <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeSKicon.png" class="me-2">South Korea (H)</div>
+        </div>
+        <table class="table table-striped table-borderless rounded-5 table-dark">
+            <thead>
+                <tr>
+                    <td colspan=4 class="table-img align-middle">
+                        <div class="img-fluid"><img class="table-img-target img-fluid" src="images/hordeSK.png"></div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Wave #</th>
+                    <th scope="col">Source</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row"><img src="images/firstPlace.png"></th>
+                    <td>SiberianPsych0</td>
+                    <td>42</td>
+                    <td><a href="https://www.youtube.com/watch?v=8wIvRcx-KJg&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
+                </tr>
+                <tr>
+                    <th scope="row"><img src="images/secondPlace.png"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th scope="row"><img src="images/thirdPlace.png"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="col-8 my-4 mx-auto">
+        <table class="table table-striped table-borderless rounded-5 table-dark">
+            <div>
+                <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeNYicon.png" class="me-2">New York (H)</div>
+            </div>
+            <thead>
+                <tr>
+                    <td colspan=4 class="table-img align-middle">
+                        <div class="img-fluid"><img class="table-img-target img-fluid" src="images/hordeNY.png"></div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Wave #</th>
+                    <th scope="col">Source</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row"><img src="images/firstPlace.png"></th>
+                    <td>SiberianPsych0</td>
+                    <td>71</td>
+                    <td><a href="https://www.youtube.com/watch?v=Ao2Fd6WEdB4&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
+                </tr>
+                <tr>
+                    <th scope="row"><img src="images/secondPlace.png"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th scope="row"><img src="images/thirdPlace.png"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="col-8 my-4 mx-auto">
+        <div>
+            <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeJicon.png" class="me-2">Jerusalem (H)</div>
+        </div>
+        <table class="table table-striped table-borderless rounded-5 table-dark">
+            <thead>
+                <tr>
+                    <td colspan=4 class="table-img align-middle">
+                        <div class="img-fluid"><img class="table-img-target img-fluid" src="images/hordeJ.png"></div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Wave #</th>
+                    <th scope="col">Source</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row"><img src="images/firstPlace.png"></th>
+                    <td>SiberianPsych0</td>
+                    <td>46</td>
+                    <td><a href="https://www.youtube.com/watch?v=2_FSYDw7So8&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
+                </tr>
+                <tr>
+                    <th scope="row"><img src="images/secondPlace.png"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th scope="row"><img src="images/thirdPlace.png"></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+
 
 </body>
 
