--- a/horde.html
+++ b/horde.html
@@ -95,12 +95,18 @@
                 </tr>
                 <tr>
                     <th scope="row"><img src="images/secondPlace.png"></th>
+                    <td>LegioX Wintersky</td>
+                    <td>53</td>
+                    <td><a href="https://www.youtube.com/watch?v=J_mgv-MR5iE&ab_channel=LegioXWintersky" target="_blank">Full</a></td>
+                </tr>
+                <tr>
+                    <th scope="row"><img src="images/thirdPlace.png"></th>
                     <td>Villainize</td>
                     <td>39</td>
                     <td><a href="https://www.youtube.com/watch?v=_FMtQh0cYBQ&ab_channel=Villainize" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"><img src="images/thirdPlace.png"></th>
+                    <th scope="row">4</th>
                     <td>Rabi William</td>
                     <td>36</td>
                     <td><a href="https://www.youtube.com/watch?v=sGksBUE_05U&ab_channel=%E3%83%A9%E3%83%93%E3%82%A6%E3%82%A3%E3%83%AA%E3%82%A2%E3%83%A0-RabiWilliam-" target="_blank">Full</a></td>
