--- a/horde.html
+++ b/horde.html
@@ -27,6 +27,8 @@
 
 
     <!-- BODY Content -->
+
+    <!-- JAPAN -->
     <div class="col-8 my-4 mx-auto">
         <div>
             <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeJapanicon.png" class="me-2">XL Tokyo (H)</div>
@@ -48,9 +50,9 @@
             <tbody>
                 <tr>
                     <th scope="row"><img src="images/firstPlace.png"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>ABA-180MM</td>
+                    <td>29</td>
+                    <td><a href="https://www.youtube.com/watch?v=rz3vFs1akc4&ab_channel=JYSoon" target="_blank">Full</a></td>
                 </tr>
                 <tr>
                     <th scope="row"><img src="images/secondPlace.png"></th>
@@ -68,6 +70,7 @@
         </table>
     </div>
 
+    <!-- ROME -->
     <div class="col-8 my-4 mx-auto">
         <div>
             <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeRicon.png" class="me-2">XL Rome (H)</div>
@@ -115,6 +118,7 @@
         </table>
     </div>
 
+    <!-- SOUTH KOREA -->
     <div class="col-8 my-4 mx-auto">
         <div>
             <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeSKicon.png" class="me-2">South Korea (H)</div>
@@ -136,26 +140,39 @@
             <tbody>
                 <tr>
                     <th scope="row"><img src="images/firstPlace.png"></th>
+                    <td>WesleyAnge</td>
+                    <td>62</td>
+                    <td><a href="https://www.youtube.com/watch?v=zGT5wC5MUBI&ab_channel=WesleyAnge" target="_blank">Full</a></td>
+                </tr>
+                <tr>
+                    <th scope="row"><img src="images/secondPlace.png"></th>
                     <td>SiberianPsych0</td>
                     <td>42</td>
                     <td><a href="https://www.youtube.com/watch?v=8wIvRcx-KJg&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"><img src="images/secondPlace.png"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <th scope="row"><img src="images/thirdPlace.png"></th>
+                    <td>ABA-180MM</td>
+                    <td>29</td>
+                    <td><a href="https://www.youtube.com/watch?v=9T2hIIwFRNA&ab_channel=JYSoon" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"><img src="images/thirdPlace.png"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <th scope="row">4</th>
+                    <td>VenaTix</td>
+                    <td>25</td>
+                    <td><a href="https://www.youtube.com/watch?v=NddhpAdhLss&ab_channel=Venatix" target="_blank">Full</a></td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>Rainiere13</td>
+                    <td>22</td>
+                    <td><a href="https://www.youtube.com/watch?v=S_Mr8DdkNX4&ab_channel=Rainiere888" target="_blank">Full</a></td>
                 </tr>
             </tbody>
         </table>
     </div>
 
+    <!-- NEW YORK -->
     <div class="col-8 my-4 mx-auto">
         <table class="table table-striped table-borderless rounded-5 table-dark">
             <div>
@@ -197,6 +214,7 @@
         </table>
     </div>
 
+    <!-- Jerusalem -->
     <div class="col-8 my-4 mx-auto">
         <div>
             <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeJicon.png" class="me-2">Jerusalem (H)</div>
