--- a/horde.html
+++ b/horde.html
@@ -109,7 +109,7 @@
                     <td><a href="https://www.youtube.com/watch?v=_FMtQh0cYBQ&ab_channel=Villainize" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row">4</th>
+                    <th scope="row"></th>
                     <td>Rabi William</td>
                     <td>36</td>
                     <td><a href="https://www.youtube.com/watch?v=sGksBUE_05U&ab_channel=%E3%83%A9%E3%83%93%E3%82%A6%E3%82%A3%E3%83%AA%E3%82%A2%E3%83%A0-RabiWilliam-" target="_blank">Full</a></td>
@@ -140,30 +140,36 @@
             <tbody>
                 <tr>
                     <th scope="row"><img src="images/firstPlace.png"></th>
+                    <td>tokuhime1582</td>
+                    <td>65</td>
+                    <td><a href="https://www.youtube.com/watch?v=usyUM4H49_s&t=8779s&ab_channel=KimPetrasandGames" target="_blank">Full</a></td>
+                </tr>
+                <tr>
+                    <th scope="row"><img src="images/secondPlace.png"></th>
                     <td>WesleyAnge</td>
                     <td>62</td>
                     <td><a href="https://www.youtube.com/watch?v=zGT5wC5MUBI&ab_channel=WesleyAnge" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"><img src="images/secondPlace.png"></th>
+                    <th scope="row"><img src="images/thirdPlace.png"></th>
                     <td>SiberianPsych0</td>
                     <td>42</td>
                     <td><a href="https://www.youtube.com/watch?v=8wIvRcx-KJg&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"><img src="images/thirdPlace.png"></th>
+                    <th scope="row"></th>
                     <td>ABA-180MM</td>
                     <td>29</td>
                     <td><a href="https://www.youtube.com/watch?v=9T2hIIwFRNA&ab_channel=JYSoon" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row">4</th>
+                    <th scope="row"></th>
                     <td>VenaTix</td>
                     <td>25</td>
                     <td><a href="https://www.youtube.com/watch?v=NddhpAdhLss&ab_channel=Venatix" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row">5</th>
+                    <th scope="row"> </th>
                     <td>Rainiere13</td>
                     <td>22</td>
                     <td><a href="https://www.youtube.com/watch?v=S_Mr8DdkNX4&ab_channel=Rainiere888" target="_blank">Full</a></td>
