--- a/horde.html
+++ b/horde.html
@@ -29,7 +29,7 @@
     <!-- BODY Content -->
 
     <!-- JAPAN -->
-    <div class="col-lg-8 col-10 my-4 mx-auto">
+    <div class="col-md-8 col-12 my-4 mx-auto">
         <div>
             <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeJapanicon.png" class="me-2">XL Tokyo (H)</div>
         </div>
@@ -71,7 +71,7 @@
     </div>
 
     <!-- ROME -->
-    <div class="col-lg-8 col-10 my-4 mx-auto">
+    <div class="col-md-8 col-12 my-4 mx-auto">
         <div>
             <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeRicon.png" class="me-2">XL Rome (H)</div>
         </div>
@@ -119,7 +119,7 @@
     </div>
 
     <!-- SOUTH KOREA -->
-    <div class="col-lg-8 col-10 my-4 mx-auto">
+    <div class="col-md-8 col-12 my-4 mx-auto">
         <div>
             <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeSKicon.png" class="me-2">South Korea (H)</div>
         </div>
@@ -179,7 +179,7 @@
     </div>
 
     <!-- NEW YORK -->
-    <div class="col-lg-8 col-10 my-4 mx-auto">
+    <div class="col-md-8 col-12 my-4 mx-auto">
         <table class="table table-striped table-borderless rounded-5 table-dark">
             <div>
                 <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeNYicon.png" class="me-2">New York (H)</div>
@@ -221,7 +221,7 @@
     </div>
 
     <!-- Jerusalem -->
-    <div class="col-lg-8 col-10 my-4 mx-auto">
+    <div class="col-md-8 col-12 my-4 mx-auto">
         <div>
             <div class="text-light h2 d-flex justify-content-center align-items-center mb-0"><img src="images/hordeJicon.png" class="me-2">Jerusalem (H)</div>
         </div>
