Updates 9/24, added group/solo icon

--- a/horde.html
+++ b/horde.html
@@ -49,7 +49,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <th scope="row"><img src="images/firstPlace.png"></th>
+                    <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-person-rifle"></i></th>
                     <td>ABA-180MM</td>
                     <td>28</td>
                     <td><a href="https://www.youtube.com/watch?v=rz3vFs1akc4&ab_channel=JYSoon" target="_blank">Full</a></td>
@@ -91,28 +91,34 @@
             </thead>
             <tbody>
                 <tr>
-                    <th scope="row"><img src="images/firstPlace.png"></th>
+                    <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
                     <td>貓白</td>
                     <td>81</td>
                     <td><a href="https://www.youtube.com/watch?v=LABCyfjCNH0&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=1&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 1</a> <a href="https://www.youtube.com/watch?v=6Mu7rN6Kka8&list=PLDYihq39QKsn5ne3G3smRkvW-3hd8zOmi&index=2&ab_channel=%E8%B2%93%E7%99%BD" target="_blank">Part 2</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"><img src="images/secondPlace.png"></th>
+                    <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
                     <td>LegioX Wintersky</td>
-                    <td>52</td>
-                    <td><a href="https://www.youtube.com/watch?v=J_mgv-MR5iE&ab_channel=LegioXWintersky" target="_blank">Full</a></td>
+                    <td>61</td>
+                    <td><a href="https://www.youtube.com/watch?v=7vyWeRqXEE0&ab_channel=LegioXWintersky" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"><img src="images/thirdPlace.png"></th>
+                    <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
                     <td>Villainize</td>
                     <td>38</td>
                     <td><a href="https://www.youtube.com/watch?v=_FMtQh0cYBQ&ab_channel=Villainize" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"></th>
+                    <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                     <td>Rabi William</td>
                     <td>35</td>
                     <td><a href="https://www.youtube.com/watch?v=sGksBUE_05U&ab_channel=%E3%83%A9%E3%83%93%E3%82%A6%E3%82%A3%E3%83%AA%E3%82%A2%E3%83%A0-RabiWilliam-" target="_blank">Full</a></td>
+                </tr>
+                <tr>
+                    <th scope="row"><i class="fa-solid fa-person-rifle"></i></th>
+                    <td>SiberianPsych0</td>
+                    <td>20</td>
+                    <td><a href="https://www.youtube.com/watch?v=xvGjaTjMauM&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
                 </tr>
             </tbody>
         </table>
@@ -139,37 +145,37 @@
             </thead>
             <tbody>
                 <tr>
-                    <th scope="row"><img src="images/firstPlace.png"></th>
+                    <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
                     <td>tokuhime1582</td>
                     <td>64</td>
                     <td><a href="https://www.youtube.com/watch?v=usyUM4H49_s&t=8779s&ab_channel=KimPetrasandGames" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"><img src="images/secondPlace.png"></th>
+                    <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
                     <td>WesleyAnge</td>
                     <td>61</td>
                     <td><a href="https://www.youtube.com/watch?v=zGT5wC5MUBI&ab_channel=WesleyAnge" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"><img src="images/thirdPlace.png"></th>
+                    <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
                     <td>SiberianPsych0</td>
                     <td>41</td>
                     <td><a href="https://www.youtube.com/watch?v=8wIvRcx-KJg&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"></th>
-                    <td>ABA-180MM</td>
+                    <th scope="row"><i class="fa-solid fa-person-rifle"></i></th>
+                    <td>FmeABA</td>
                     <td>28</td>
                     <td><a href="https://www.youtube.com/watch?v=9T2hIIwFRNA&ab_channel=JYSoon" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"></th>
+                    <th scope="row"><i class="fa-solid fa-people-group"></i></th>
                     <td>VenaTix</td>
                     <td>24</td>
                     <td><a href="https://www.youtube.com/watch?v=NddhpAdhLss&ab_channel=Venatix" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"> </th>
+                    <th scope="row"><i class="fa-solid fa-person-rifle"></i></th>
                     <td>Rainiere13</td>
                     <td>22</td>
                     <td><a href="https://www.youtube.com/watch?v=S_Mr8DdkNX4&ab_channel=Rainiere888" target="_blank">Full</a></td>
@@ -199,16 +205,16 @@
             </thead>
             <tbody>
                 <tr>
-                    <th scope="row"><img src="images/firstPlace.png"></th>
+                    <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
                     <td>SiberianPsych0</td>
                     <td>70</td>
                     <td><a href="https://www.youtube.com/watch?v=Ao2Fd6WEdB4&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"><img src="images/secondPlace.png"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                    <td>LongBienStreet</td>
+                    <td>19</td>
+                    <td><a href="https://www.youtube.com/watch?v=xrpYWAqRy-4&ab_channel=Tr%E1%BB%8Dng%C4%90%E1%BA%A1t" target="_blank">Full</a></td>
                 </tr>
                 <tr>
                     <th scope="row"><img src="images/thirdPlace.png"></th>
@@ -241,16 +247,16 @@
             </thead>
             <tbody>
                 <tr>
-                    <th scope="row"><img src="images/firstPlace.png"></th>
+                    <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
                     <td>SiberianPsych0</td>
                     <td>45</td>
                     <td><a href="https://www.youtube.com/watch?v=2_FSYDw7So8&ab_channel=SiberianPsych0" target="_blank">Full</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"><img src="images/secondPlace.png"></th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                    <td>LongBienStreet</td>
+                    <td>18</td>
+                    <td><a href="https://www.youtube.com/watch?v=TQKaulcvGbc&ab_channel=Tr%E1%BB%8Dng%C4%90%E1%BA%A1t" target="_blank">Full</a></td>
                 </tr>
                 <tr>
                     <th scope="row"><img src="images/thirdPlace.png"></th>
