Layout w/ Norm added

--- a/horde.html
+++ b/horde.html
@@ -31,10 +31,11 @@
     <div class="d-flex justify-content-center my-4">
         <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
             <input type="radio" class="btn-check" name="btnradio" id="btnradio1" checked>
-            <label class="btn btn-outline-primary" for="btnradio1">HARD</label>
+            <label class="btn btn-outline-light" for="btnradio1">HARD</label>
 
             <input type="radio" class="btn-check" name="btnradio" id="btnradio2">
-            <label class="btn btn-outline-primary" for="btnradio2">NORMAL</label>
+            <label class="btn btn-outline-light" for="btnradio2">NORMAL</label>
+
         </div>
     </div>
     <!-- CODE DIVISION -->
@@ -59,16 +60,16 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row"><img src="images/firstPlace.png"></i></th>
-                        <td></td>
-                        <td></td>
-                        <td><a href="#" target="_blank"></a></td>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>Gamexia</td>
+                        <td>24</td>
+                        <td><a href="https://www.youtube.com/watch?v=JEyxMAF1HSM&ab_channel=GAMEXIA" target="_blank">Full</a></td>
                     </tr>
                     <tr>
-                        <th scope="row"><img src="images/secondPlace.png"></th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>ZelexFPS</td>
+                        <td>21</td>
+                        <td><a href="https://www.youtube.com/watch?v=E_GUah51jFI&ab_channel=ZelexFPS" target="_blank">Full</a></td>
                     </tr>
                     <tr>
                         <th scope="row"><img src="images/thirdPlace.png"></th>
@@ -102,9 +103,9 @@
                 <tbody>
                     <tr>
                         <th scope="row"><img src="images/firstPlace.png"></i></th>
-                        <td></td>
-                        <td></td>
-                        <td><a href="#" target="_blank"></a></td>
+                        <td>LordGalller</td>
+                        <td>9</td>
+                        <td><a href="https://www.youtube.com/watch?v=ijS7pH6LKlU&t=18s&ab_channel=FireTeamShooters" target="_blank">Full</a></td>
                     </tr>
                     <tr>
                         <th scope="row"><img src="images/secondPlace.png"></th>
@@ -143,19 +144,25 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row"><img src="images/firstPlace.png"></i></th>
-                        <td></td>
-                        <td></td>
-                        <td><a href="#" target="_blank"></a></td>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>WarCrabft</td>
+                        <td>55</td>
+                        <td><a href="https://www.youtube.com/watch?v=tjRUXaquzTg&t=2551s&ab_channel=ManaGroveNoCommentaryGameplays" target="_blank">Full</a></td>
                     </tr>
                     <tr>
-                        <th scope="row"><img src="images/secondPlace.png"></th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>A.damz</td>
+                        <td>39</td>
+                        <td><a href="https://www.youtube.com/watch?v=6umXwNlY7A4&t=1421s&ab_channel=Qu%C3%A2nQuanhQu%E1%BA%A9n" target="_blank">Full</a></td>
                     </tr>
                     <tr>
-                        <th scope="row"><img src="images/thirdPlace.png"></th>
+                        <th scope="row"><img src="images/thirdPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>Gaming_Games_YT</td>
+                        <td>14</td>
+                        <td><a href="https://www.youtube.com/watch?v=O06oJltmjY4&ab_channel=Gaming%2CGamesandmore" target="_blank">Full</a></td>
+                    </tr>
+                    <tr>
+                        <th scope="row"></th>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -185,16 +192,16 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row"><img src="images/firstPlace.png"></i></th>
-                        <td></td>
-                        <td></td>
-                        <td><a href="#" target="_blank"></a></td>
+                        <th scope="row"><img src="images/firstPlace.png"><i class="fa-solid fa-people-group"></i></th>
+                        <td>yahowyada</td>
+                        <td>30</td>
+                        <td><a href="https://www.youtube.com/watch?v=Zg-UzLFCNjc&t=8160s&ab_channel=yahowyadaTV" target="_blank">Full</a></td>
                     </tr>
                     <tr>
-                        <th scope="row"><img src="images/secondPlace.png"></th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <th scope="row"><img src="images/secondPlace.png"><i class="fa-solid fa-person-rifle"></i></i></th>
+                        <td>Sherm</td>
+                        <td>22</td>
+                        <td><a href="https://www.youtube.com/watch?v=GSXyLCjqqT4&t=2288s&ab_channel=Wenox" target="_blank">Full</a></td>
                     </tr>
                     <tr>
                         <th scope="row"><img src="images/thirdPlace.png"></th>
